--- a/cursojs/modulo-a/aula004/ex001.html
+++ b/cursojs/modulo-a/aula004/ex001.html
@@ -20,11 +20,11 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        /* Alerta */
+        //Alerta
         window.alert('Minha primeira mensagem!')
-        /* Confirmação */
+        //Confirmação ( ok e cancel )
         window.confirm('Está gostando de JS?')
-        /* Pergunta */
+        //Pergunta
         window.prompt('Qual é seu nome?')
     </script>
 </body>
