--- a/cursojs/modulo-d/exercícios/ex001/modelo.html
+++ b/cursojs/modulo-d/exercícios/ex001/modelo.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta https-equiv="X-UA-Compatible" content="ie-edge">
     <title>Hora do Dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="carregar()">
+<body onload="Carregar()">
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
         <div id="msg">
-            Testando...
+            Aqui vai aparecer a mensagem...
         </div>
         <div id="foto">
-            <img id="imagem" src="manhã.png" alt="Foto do dia ">
+            <img id="imagem" src="manha.png" alt="Foto do dia ">
         </div>
     </section>
     <footer>
